Bump spotify-web-api-java to 7.0.0